force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Active__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>