force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Assignment_Tracker__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Assignment_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Tracker</label>
    <referenceTo>forcerules__Assignment_Tracker__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>