force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <default>true</default>
                <label>Owner</label>
            </value>
            <value>
                <fullName>Crew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>