force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Crew__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>forcerules__Crew__c.forcerules__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>forcerules__Crew__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>