force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Email_Template__c</fullName>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>