force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>