force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>