force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Owner_Queue__c</fullName>
    <label>Owner (Queue)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>