force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Owner_User__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>