force-app/main/default/objects/forcerules__Rule__c/fields/forcerules__Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Round Robin</label>
    <type>Checkbox</type>
</CustomField>