force-app/main/default/objects/forcerules__Rule__c/listViews/forcerules__Active_Rules.listView-meta.xml
<ListView>
    <fullName>forcerules__Active_Rules</fullName>
    <columns>NAME</columns>
    <columns>forcerules__Object_Name__c</columns>
    <columns>forcerules__Assignment_Type__c</columns>
    <columns>forcerules__Crew__c</columns>
    <columns>forcerules__Sort_Order__c</columns>
    <columns>forcerules__Round_Robin__c</columns>
    <columns>forcerules__Owner_Queue__c</columns>
    <columns>forcerules__Owner_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>forcerules__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rules</label>
</ListView>