force-app/main/default/objects/forcerules__Rule__c/listViews/forcerules__All.listView-meta.xml
<ListView>
    <fullName>forcerules__All</fullName>
    <columns>NAME</columns>
    <columns>forcerules__Sort_Order__c</columns>
    <columns>forcerules__Object_Name__c</columns>
    <columns>forcerules__Active__c</columns>
    <columns>forcerules__Owner_Queue__c</columns>
    <columns>forcerules__Owner_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>